objects/User.object
<CustomObject>
    <fields>
        <fullName>Apts_Revenue_Channel__c</fullName>
        <label>Apts Revenue Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>BDP_OAuth_Expires_At__c</fullName>
        <label>BDP OAuth Expires At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BDP_OAuth_Token__c</fullName>
        <label>BDP OAuth Token</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BDR_SDR__c</fullName>
        <description>This field is used to identify the users who belongs to BDR/SDR process.(DPS-3536)</description>
        <inlineHelpText>This field is used to identify the users who belongs to BDR/SDR process.</inlineHelpText>
        <label>BDR/SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BEJERMAN</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>GTM</fullName>
                </value>
                <value>
                    <fullName>LALEY</fullName>
                </value>
                <value>
                    <fullName>MASTERSAF</fullName>
                </value>
                <value>
                    <fullName>MEXICO - CORPORATE</fullName>
                </value>
                <value>
                    <fullName>MEXICO - PRINT</fullName>
                </value>
                <value>
                    <fullName>NOVAPROLINK</fullName>
                </value>
                <value>
                    <fullName>PARAGUAY</fullName>
                </value>
                <value>
                    <fullName>PERU</fullName>
                </value>
                <value>
                    <fullName>REVISTA - ONLINE</fullName>
                </value>
                <value>
                    <fullName>REVISTA - PRINT</fullName>
                </value>
                <value>
                    <fullName>REVISTA - TELESALES</fullName>
                </value>
                <value>
                    <fullName>SL - CORPORATE</fullName>
                </value>
                <value>
                    <fullName>TEDESCO</fullName>
                </value>
                <value>
                    <fullName>URUGUAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF (Profile.Name = &quot;TR Legal Read-Only User&quot;, &quot;Tier 2&quot;, 
IF (UserRole.Name = &quot;Director&quot;, &quot;Tier 2&quot;, 
IF (UserRole.Name = &quot;WPD - Marketing&quot;, &quot;Tier 2&quot;, 
IF (Profile.Name = &quot;TR Legal FindLaw User&quot;, &quot;FindLaw&quot;, 
IF (BEGINS(UserRole.Name, &quot;Large Law&quot;), &quot;Large Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;Law Firm&quot;), &quot;Large Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;National&quot;), &quot;Large Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;LL&quot;), &quot;Large Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;SAM&quot;), &quot;Small Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;Small Law&quot;), &quot;Small Law&quot;, 
IF (BEGINS(UserRole.Name, &quot;Home Office&quot;), &quot;Inside Sales&quot;, 
IF (BEGINS(UserRole.Name, &quot;Corp&quot;), &quot;Corp&quot;, 
IF (CONTAINS(UserRole.Name, &quot;Govt&quot;), &quot;Govt&quot;, 
IF (BEGINS(UserRole.Name, &quot;WPD&quot;), &quot;WPD&quot;, 
IF (BEGINS(UserRole.Name, &quot;ANZ&quot;), &quot;ANZ&quot;, 
IF (BEGINS(UserRole.Name, &quot;AU&quot;), &quot;AU&quot;, 
IF (BEGINS(UserRole.Name, &quot;HK&quot;), &quot;HK&quot;, 
IF (BEGINS(UserRole.Name, &quot;NZ&quot;), &quot;NZ&quot;, 
IF (BEGINS(Profile.Name, &quot;ANZ&quot;), &quot;ANZ&quot;, 
IF (CONTAINS(Profile.Name, &quot;Admin&quot;), &quot;MIS/Admin&quot;, 

UserRole.Name 
))))))))))))))))))))</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_from_TMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created_from_TMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Catalog__c</fullName>
        <label>Default Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Findlaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>Pulls District from TMS for reporting purposes</description>
        <label>District</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Inactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Inactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_GSI_Commission_Payment_Model__c</fullName>
        <description>Used to determine to redirect user to M1/M2 Reporting model of Payment report</description>
        <formula>IF(OR
(Rep_Type_Description__c  = &apos;Income Tax-Income Tax Ent-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;Income Tax-OWM Enterprise-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;Property Tax-Property Tax-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;Provision US-Provision US-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;SU Software-Sls Use Sftwr-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;Global Compliance US-Sls Use Sftwr-Director of Sales&apos;,
Rep_Type_Description__c  = &apos;Legal-Content-Area Manager&apos;,
Rep_Type_Description__c  = &apos;EMEA Corp-Global 7-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Income Tax-Global 7-Account Manager&apos;,
Rep_Type_Description__c  = &apos;SU Software-Global 7-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Corp-Global 7-Sales Specialist&apos;,
Rep_Type_Description__c  = &apos;Legal-Content Global-Account Manager&apos;,
Rep_Type_Description__c  = &apos;National-TRSS-Client Manager&apos;,
Rep_Type_Description__c  = &apos;Legal-Content-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Income Tax-OWM Enterprise-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Income Tax-Income Tax Ent-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Provision US-Provision US-Account Manager&apos;,
Rep_Type_Description__c  = &apos;National-CMS Bus Devel-Manager&apos;,
Rep_Type_Description__c  = &apos;Global Compliance US-Sls Use Sftwr-Account Manager&apos;,
Rep_Type_Description__c  = &apos;Property Tax-Property Tax-Account Manager&apos;,
Rep_Type_Description__c  = &apos;&apos;
), True, False)</formula>
        <label>Commission Payment Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICP_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This states that this user has ICP addmin ability to add reps and see thing etc</description>
        <label>ICP Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrequent_User_Timeout__c</fullName>
        <label>Infrequent User Timeout (in hrs)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrequent_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infrequent User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Consensus_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created As part of DPS-21667</description>
        <label>Consensus user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LM_Regional_Manager__c</fullName>
        <description>This field is used for Lead Management project to track User&apos;s Sales Manager(Regional Manager)</description>
        <label>LM Regional Manager</label>
        <relationshipName>UserLookUp</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>This is a copy of native salesforce language field - populated via a Trigger.
This additional field is needed so that the user language can be referenced in formula fields, workflow rule etc., because the native language field is not available to reference via the Salesforce Configuration interface.</description>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Deactivation_Date__c</fullName>
        <label>Last Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatAm_Department__c</fullName>
        <description>Picklist field used to faciliate LatAm reporting by Department.</description>
        <label>LatAm Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administración LLEY</fullName>
                </value>
                <value>
                    <fullName>AR-Administrativo-Logística</fullName>
                </value>
                <value>
                    <fullName>AR-Corporaciones</fullName>
                </value>
                <value>
                    <fullName>AR-Distribuidores</fullName>
                </value>
                <value>
                    <fullName>AR-E-Commerce</fullName>
                </value>
                <value>
                    <fullName>AR-Locales</fullName>
                </value>
                <value>
                    <fullName>AR-SB Canales</fullName>
                </value>
                <value>
                    <fullName>AR-SB Contadores y Pequeñas Empresas</fullName>
                </value>
                <value>
                    <fullName>AR-SB CustomerExperience</fullName>
                </value>
                <value>
                    <fullName>AR-SB Empresas Medianas</fullName>
                </value>
                <value>
                    <fullName>AR-SB Lead Generation</fullName>
                </value>
                <value>
                    <fullName>AR-SB Negocios Digitales</fullName>
                </value>
                <value>
                    <fullName>AR-Segmento Grandes Cuentas</fullName>
                </value>
                <value>
                    <fullName>AR-Segmento Medio</fullName>
                </value>
                <value>
                    <fullName>AR-Telesales</fullName>
                </value>
                <value>
                    <fullName>BR-Corporate &amp; Government - Sales</fullName>
                </value>
                <value>
                    <fullName>BR-Editorial</fullName>
                </value>
                <value>
                    <fullName>BR-Finance</fullName>
                </value>
                <value>
                    <fullName>BR-Lead Generation</fullName>
                </value>
                <value>
                    <fullName>BR-Legal One - Customer Success</fullName>
                </value>
                <value>
                    <fullName>BR-Legal One - Sales</fullName>
                </value>
                <value>
                    <fullName>BR-Legal One - Sales Specialists</fullName>
                </value>
                <value>
                    <fullName>BR-Legal One - Services</fullName>
                </value>
                <value>
                    <fullName>BR-Legal One - Telesales</fullName>
                </value>
                <value>
                    <fullName>BR-Legal Print</fullName>
                </value>
                <value>
                    <fullName>BR-Legal Print - Online</fullName>
                </value>
                <value>
                    <fullName>BR-Legal Print - Sales</fullName>
                </value>
                <value>
                    <fullName>BR-Legal Print - Telesales</fullName>
                </value>
                <value>
                    <fullName>BR-Legal - Projects</fullName>
                </value>
                <value>
                    <fullName>BR-Legal - Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2_Manager__c</fullName>
        <description>Represents Level 2 Manager of User, data is populated from TMS-Territory Management System</description>
        <inlineHelpText>Represents Level 2 Manager of User, data is populated from TMS-Territory Management System</inlineHelpText>
        <label>Level 2 Manager</label>
        <relationshipName>UserlookupLevel2Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Level_3_Manager__c</fullName>
        <description>Represents Level 3 Manager of User, data is populated from TMS-Territory Management System</description>
        <inlineHelpText>Represents Level 3 Manager of User, data is populated from TMS-Territory Management System</inlineHelpText>
        <label>Level 3 Manager</label>
        <relationshipName>UserlookupLevel3Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Level_4_Manager__c</fullName>
        <description>Represents Level 4 Manager of User, data is populated from TMS-Territory Management System</description>
        <inlineHelpText>Represents Level 4 Manager of User, data is populated from TMS-Territory Management System</inlineHelpText>
        <label>Level 4 Manager</label>
        <relationshipName>UserlookupLevel4Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Description__c</fullName>
        <label>Market Segment Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sale_User_Quota_Curr_Yr__c</fullName>
        <label>New Sale User Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Mgr__c</fullName>
        <description>Pulls Regional Manager from TMS for reporting purposes</description>
        <label>Regional Manager</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_User_Quota_Curr_Yr__c</fullName>
        <label>Renewal User Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_Employee_Number__c</fullName>
        <description>Unique Id for each User linked to TMS</description>
        <externalId>true</externalId>
        <label>Rep Employee Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rep_Function_Description__c</fullName>
        <label>Rep Function Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Type_Description__c</fullName>
        <label>Rep Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAM AM</fullName>
                </value>
                <value>
                    <fullName>SAM FS Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Force_Description__c</fullName>
        <label>Sales Force Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Holds Sales Org for User</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BEJE</fullName>
                </value>
                <value>
                    <fullName>BKRS</fullName>
                </value>
                <value>
                    <fullName>CHWL</fullName>
                </value>
                <value>
                    <fullName>DFCL</fullName>
                </value>
                <value>
                    <fullName>EDIC</fullName>
                </value>
                <value>
                    <fullName>GLI</fullName>
                </value>
                <value>
                    <fullName>GSI</fullName>
                </value>
                <value>
                    <fullName>LLEY</fullName>
                </value>
                <value>
                    <fullName>LLPA</fullName>
                </value>
                <value>
                    <fullName>LLUR</fullName>
                </value>
                <value>
                    <fullName>LPCL</fullName>
                </value>
                <value>
                    <fullName>LPTC</fullName>
                </value>
                <value>
                    <fullName>LRA</fullName>
                </value>
                <value>
                    <fullName>RV01</fullName>
                </value>
                <value>
                    <fullName>SMGE</fullName>
                </value>
                <value>
                    <fullName>SMHK</fullName>
                </value>
                <value>
                    <fullName>SMMY</fullName>
                </value>
                <value>
                    <fullName>SMSG</fullName>
                </value>
                <value>
                    <fullName>SSRL</fullName>
                </value>
                <value>
                    <fullName>TGPS</fullName>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Created as part of data segmentation for LOTUS, should hold different Business Segments. DPS-2201, DPS-415</description>
        <label>BU Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Bu__c</fullName>
        <description>The field has been created to define the sub bu of the user which will be used to populate the Sub bu field on objects Account,Lead,Opportunities,Activity etc. 
Renamed from ‘Sub-BU’ to ‘BU Region’ as part of data segmentation for LOTUS. DPS-2201, DPS-415</description>
        <label>BU Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>AEM</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMS_Channel__c</fullName>
        <description>Pulls Channel from TMS for reporting purposes</description>
        <label>TMS Channel</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERID18__c</fullName>
        <description>This is used for reporting purposes on the user object.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USERID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Currency_Custom__c</fullName>
        <label>User_Currency_Custom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>PYG</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>UYU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <label>deprecated</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension_v2__c</fullName>
        <label>Agent Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iahelp__ImprovedHelpUserType__c</fullName>
        <inlineHelpText>For Improved Help Subscriptions based on Named Users, sets this User&apos;s Improved Help User Type</inlineHelpText>
        <label>Improved Help User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped User</fullName>
                    <color>#0B6FCE</color>
                    <label>Helped User</label>
                </value>
                <value>
                    <fullName>Help Analyst</fullName>
                    <color>#78C953</color>
                    <label>Help Analyst</label>
                </value>
                <value>
                    <fullName>Help Author</fullName>
                    <color>#E27001</color>
                    <label>Help Author</label>
                </value>
                <value>
                    <fullName>Help Administrator</fullName>
                    <color>#A845DC</color>
                    <label>Help Administrator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Group_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify whether a user is an active member of Q-assign Assignment Groups or not. Only active members can be assigned jobs.</description>
        <inlineHelpText>If checked, user will be enabled for Q-assign Assignment Groups and can be assigned jobs if an active member of a Q-assign Assignment Group. If unchecked, the user will be inactive for Q-assign Assignment Groups and cannot be assigned jobs.</inlineHelpText>
        <label>Available for Q-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_No_Login</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Rep_Employee_Number__c</columns>
        <columns>Rep_Function_Description__c</columns>
        <columns>Rep_Type_Description__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>TR Legal US Sales User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Active - No Login - US Sales</label>
    </listViews>
</CustomObject>